Bug 138343 - File open dialog doesn't use standard encoding set in options
Summary: File open dialog doesn't use standard encoding set in options
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Miscellaneous
Component: general (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-12-04 14:16 UTC by gmud
Modified: 2006-12-23 13:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gmud 2006-12-04 14:16:12 UTC
Version:           3.5.5 (using KDE 3.5.5, Gentoo)
Compiler:          gcc version 3.4.6 (Gentoo 3.4.6-r1, ssp-3.4.5-1.0, pie-8.7.9)
OS:                Linux (i686) release 2.6.18-suspend2

When I click on the "Open-File" icon a new window opens with the list of files. At the top right of the window I can select the encoding with which i want to open files. This is always koi8-r (the first entry in the list) regardless of the setting of standard encoding in the options of qunata or the setting "file format" in the editor setup.
Comment 1 gmud 2006-12-04 14:42:13 UTC
I just noticed, it was a non existing character encoding in the config file (UTF-8 instead of utf8) set. Perhaps an artefact of an old quanta version ... I deleted the setting, started quanta and set the right encoding again in the setting dialog. Now it works. Perhaps quanta should check, if the selected entry is really available (check against the current encoding list)??
Comment 2 András Manţia 2006-12-23 13:11:23 UTC
SVN commit 615950 by amantia:

Use the correct encoding in the file dialogs.

BUG: 138343

 M  +45 -12    kommander/kommander.kdevelop  
 M  +1 -0      quanta/ChangeLog  
 M  +24 -14    quanta/quanta.kdevelop  
 M  +1 -1      quanta/src/quanta.cpp  


--- branches/KDE/3.5/kdewebdev/kommander/kommander.kdevelop #615949:615950
@@ -13,13 +13,9 @@
     <projectdirectory>.</projectdirectory>
     <absoluteprojectpath>false</absoluteprojectpath>
     <description/>
-    <ignoreparts>
-      <part>KDevClearCase</part>
-      <part>KDevPerforce</part>
-      <part>KDevDoxygen</part>
-      <part>KDevsubversion</part>
-    </ignoreparts>
+    <ignoreparts/>
     <secondaryLanguages/>
+    <defaultencoding/>
   </general>
   <kdevfileview>
     <groups>
@@ -105,7 +101,7 @@
   <kdevdebugger>
     <general>
       <dbgshell/>
-      <programargs>/home/andris/development/quanta/quanta/quanta/scripts/htmlquickstart.kmdr</programargs>
+      <programargs>/opt/kde3/bin/DVDAuthorWizard.kmdr</programargs>
       <gdbpath/>
       <breakonloadinglibs>true</breakonloadinglibs>
       <separatetty>false</separatetty>
@@ -146,9 +142,9 @@
     </general>
     <configurations>
       <default>
-        <configargs>--with-kommander</configargs>
-        <builddir>/home/ja/programming/kde/cvs/HEAD/kdewebdev/kommander</builddir>
-        <topsourcedir>/home/ja/programming/kde/cvs/HEAD/kdewebdev/kommander</topsourcedir>
+        <configargs>--enable-debug=full</configargs>
+        <builddir>/home/andris/development/build/kde-3.5/kdewebdev/</builddir>
+        <topsourcedir>/home/andris/development/kdewebdev/</topsourcedir>
         <cppflags/>
         <ldflags/>
         <ccompiler>kdevgccoptions</ccompiler>
@@ -164,13 +160,15 @@
       </default>
     </configurations>
     <run>
-      <mainprogram>executor/kmdr-executor</mainprogram>
-      <programargs>examples/tutorial/append.kmdr</programargs>
+      <mainprogram>kommander/executor/.libs/kmdr-executor</mainprogram>
+      <programargs>/opt/kde3/bin/DVDAuthorWizard.kmdr</programargs>
       <terminal>false</terminal>
       <envvars/>
       <directoryradio>build</directoryradio>
       <customdirectory>/</customdirectory>
       <autocompile>true</autocompile>
+      <autoinstall>false</autoinstall>
+      <autokdesu>false</autokdesu>
     </run>
   </kdevautoproject>
   <cppsupportpart>
@@ -210,8 +208,43 @@
       <codeCompletionDelay>250</codeCompletionDelay>
       <argumentsHintDelay>400</argumentsHintDelay>
       <headerCompletionDelay>250</headerCompletionDelay>
+      <showOnlyAccessibleItems>false</showOnlyAccessibleItems>
+      <completionBoxItemOrder>0</completionBoxItemOrder>
+      <howEvaluationContextMenu>true</howEvaluationContextMenu>
+      <showCommentWithArgumentHint>true</showCommentWithArgumentHint>
+      <statusBarTypeEvaluation>false</statusBarTypeEvaluation>
+      <namespaceAliases>std=_GLIBCXX_STD</namespaceAliases>
+      <processPrimaryTypes>true</processPrimaryTypes>
+      <processFunctionArguments>false</processFunctionArguments>
+      <preProcessAllHeaders>false</preProcessAllHeaders>
+      <parseMissingHeaders>false</parseMissingHeaders>
+      <resolveIncludePaths>true</resolveIncludePaths>
+      <alwaysParseInBackground>true</alwaysParseInBackground>
+      <usePermanentCaching>true</usePermanentCaching>
+      <alwaysIncludeNamespaces>false</alwaysIncludeNamespaces>
+      <includePaths>.;</includePaths>
     </codecompletion>
     <references/>
+    <qt>
+      <used>false</used>
+      <version>3</version>
+      <root>/usr/lib/qt3</root>
+      <includestyle>3</includestyle>
+      <designerintegration>EmbeddedKDevDesigner</designerintegration>
+    </qt>
+    <creategettersetter>
+      <prefixGet/>
+      <prefixSet>set</prefixSet>
+      <prefixVariable>m_,_</prefixVariable>
+      <parameterName>theValue</parameterName>
+      <inlineGet>true</inlineGet>
+      <inlineSet>true</inlineSet>
+    </creategettersetter>
+    <splitheadersource>
+      <enabled>false</enabled>
+      <synchronize>true</synchronize>
+      <orientation>Vertical</orientation>
+    </splitheadersource>
   </kdevcppsupport>
   <kdevcvsservice>
     <recursivewhenupdate>true</recursivewhenupdate>
--- branches/KDE/3.5/kdewebdev/quanta/ChangeLog #615949:615950
@@ -5,6 +5,7 @@
       - show Find in Files menu if KFileReplace is installed [related to #132530]
       - fix various crashes in the debugger [#137483]
       - fix crash when editing a <style> CSS area
+      - use the correct encoding in the file dialogs [#138343]
 
 Version 3.5.5 (Release date: 11-10-2006; Started 01-09-2006):
  - bugfixes:
--- branches/KDE/3.5/kdewebdev/quanta/quanta.kdevelop #615949:615950
@@ -12,7 +12,6 @@
     <version>3.2-CVS-1</version>
     <description>Quanta Plus Web Development Environment</description>
     <ignoreparts>
-      <part>kdevkonsoleview</part>
       <part>kdevvalgrind</part>
     </ignoreparts>
     <projectdirectory>.</projectdirectory>
@@ -55,12 +54,14 @@
       <directoryradio>build</directoryradio>
       <customdirectory>/</customdirectory>
       <autocompile>true</autocompile>
+      <autoinstall>false</autoinstall>
+      <autokdesu>false</autokdesu>
     </run>
     <envvars/>
     <configurations>
       <default>
         <configargs>--enable-debug=full --prefix=/opt/kde-35 --enable-editors</configargs>
-        <builddir>/home/andris/development/build/kde-3.5/kdewebdev</builddir>
+        <builddir>/data/development/build/kde-3.5/kdewebdev</builddir>
         <ccompiler>kdevgccoptions</ccompiler>
         <cxxcompiler>kdevgppoptions</cxxcompiler>
         <f77compiler>kdevpgf77options</f77compiler>
@@ -70,7 +71,7 @@
         <cflags>-DKDE_NO_COMPAT -DQT_NO_COMPAT</cflags>
         <cxxflags>-DKDE_NO_COMPAT -DQT_NO_COMPAT -DDEBUG_PARSER</cxxflags>
         <f77flags/>
-        <topsourcedir>/home/andris/development/kdewebdev</topsourcedir>
+        <topsourcedir>/data/development/sources/kde-3.5/kdewebdev</topsourcedir>
         <cppflags/>
         <ldflags/>
         <envvars>
@@ -79,7 +80,7 @@
       </default>
       <withkommander>
         <configargs>--enable-debug=full --prefix=/opt/kde3</configargs>
-        <builddir>/home/andris/development/build/kde-head/kdewebdev</builddir>
+        <builddir>/data/development/build/kde-head/kdewebdev</builddir>
         <topsourcedir/>
         <ccompiler>kdevgccoptions</ccompiler>
         <cxxcompiler>kdevgppoptions</cxxcompiler>
@@ -95,8 +96,8 @@
       </withkommander>
       <all>
         <configargs>--enable-debug=full --prefix=/opt/kde3 --enable-editors</configargs>
-        <builddir>/home/andris/development/build/kde-head/kdewebdev</builddir>
-        <topsourcedir>/home/andris/development/sources/kde-head/kdewebdev</topsourcedir>
+        <builddir>/data/development/build/kde-head/kdewebdev</builddir>
+        <topsourcedir>/data/development/sources/kde-head/kdewebdev</topsourcedir>
         <ccompiler>kdevgccoptions</ccompiler>
         <cxxcompiler>kdevgppoptions</cxxcompiler>
         <f77compiler>kdevpgf77options</f77compiler>
@@ -111,7 +112,7 @@
       </all>
       <withoutkafka>
         <configargs>--enable-debug=full --without-kommander --without-kafkapart --prefix=/opt/kde3</configargs>
-        <builddir>/home/andris/development/build/kde-head/kdewebdev-simple</builddir>
+        <builddir>/data/development/build/kde-head/kdewebdev-simple</builddir>
         <topsourcedir/>
         <cppflags/>
         <ldflags/>
@@ -127,8 +128,8 @@
       </withoutkafka>
       <final>
         <configargs>--enable-debug=full --without-kommander --prefix=/opt/kde3 --enable-final</configargs>
-        <builddir>/home/andris/development/build/kde-head/kdewebdev-final</builddir>
-        <topsourcedir>/home/andris/development/sources/kde-head/kdewebdev</topsourcedir>
+        <builddir>/data/development/build/kde-head/kdewebdev-final</builddir>
+        <topsourcedir>/data/development/sources/kde-head/kdewebdev</topsourcedir>
         <cppflags/>
         <ldflags/>
         <ccompiler>kdevgccoptions</ccompiler>
@@ -245,10 +246,10 @@
   </kdevcvs>
   <kdevfilecreate>
     <filetypes>
-      <type icon="" ext="h" name="C++ header" create="template" >
+      <type icon="" ext="h" create="template" name="C++ header" >
         <descr>Quanta speicfic header</descr>
       </type>
-      <type icon="source_cpp" ext="cpp" name="C++ source" create="template" >
+      <type icon="source_cpp" ext="cpp" create="template" name="C++ source" >
         <descr>A new empty C++ file.</descr>
       </type>
     </filetypes>
@@ -274,6 +275,13 @@
       <namespaceAliases>std=_GLIBCXX_STD</namespaceAliases>
       <processPrimaryTypes>true</processPrimaryTypes>
       <processFunctionArguments>false</processFunctionArguments>
+      <preProcessAllHeaders>false</preProcessAllHeaders>
+      <parseMissingHeaders>false</parseMissingHeaders>
+      <resolveIncludePaths>true</resolveIncludePaths>
+      <alwaysParseInBackground>true</alwaysParseInBackground>
+      <usePermanentCaching>true</usePermanentCaching>
+      <alwaysIncludeNamespaces>false</alwaysIncludeNamespaces>
+      <includePaths>.;</includePaths>
     </codecompletion>
     <references/>
     <creategettersetter>
@@ -285,11 +293,13 @@
       <inlineSet>true</inlineSet>
     </creategettersetter>
     <qt>
-      <used>false</used>
+      <used>true</used>
       <version>3</version>
       <root>/usr/lib/qt3</root>
-      <includestyle>4</includestyle>
-      <designerintegration>EmbeddedKDevDesigner</designerintegration>
+      <includestyle>3</includestyle>
+      <designerintegration>ExternalDesigner</designerintegration>
+      <qmake>/usr/lib/qt3/bin/qmake</qmake>
+      <designer>/usr/lib/qt3/bin/designer</designer>
     </qt>
     <designerintegration>
       <qtdesigner/>
--- branches/KDE/3.5/kdewebdev/quanta/src/quanta.cpp #615949:615950
@@ -3482,7 +3482,7 @@
   {
     encoding = Project::ref()->defaultEncoding();
   }
-  return encoding;
+  return encoding.lower();
 }
 
 void QuantaApp::slotGetUserToolbarFiles(KURL::List *list)