Use the correct encoding in the file dialogs.

BUG: 138343